# rz-libyara

./: .gitignore  .gitmodules  README.md  meson.build  meson_options.txt
.github/workflows/: linter.yml
.reuse/: dep5
cutter-plugin/: CMakeLists.txt  YaraAddDialog.cpp  YaraAddDialog.h  YaraAddMetaDialog.cpp  YaraAddMetaDialog.h  YaraDescription.h  YaraPlugin.cpp  YaraPlugin.h  YaraSyntax.cpp  YaraSyntax.h  YaraTextEditor.cpp  YaraTextEditor.h  YaraTextEditor.ui  YaraViewMenu.cpp  YaraViewMenu.h  YaraWidget.cpp  YaraWidget.h  YaraWidget.ui
include/: rz_yara.h
src/: yara_common.h  yara_generator.c  yara_parser.c  yara_plugin.c
subprojects/: yara.wrap
subprojects/packagefiles/yara/: meson.build  meson_options.txt
